objects/ModifiedRecord__e.object
<CustomObject>
    <fields>
        <fullName>IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsDeleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ObjectName__c</fullName>
        <label>ObjectName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordId__c</fullName>
        <label>RecordId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>ModifiedRecord</label>
    <pluralLabel>ModifiedRecord</pluralLabel>
</CustomObject>